# challenge-wd

./: .coveragerc  .env  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: aafbfc6a2ed2_init.py
app/: setup.py
app/adapters/: mocks.py
app/adapters/email/: __init__.py  sendgrid_adapter.py  ses_adapter.py
app/adapters/notification/: __init__.py  database_adapter.py
app/adapters/preferences/: __init__.py  database_adapter.py
app/adapters/property/: __init__.py  microservice_adapter.py
app/adapters/queue/: __init__.py  fastapi_background_task_adapter.py
app/adapters/sms/: __init__.py  sns_adapter.py  twilio_adapter.py
app/adapters/user/: __init__.py  microservice_adapter.py
app/config/: __init__.py  database.py  email_service.py  internal_service.py  logging.py  queue.py  rabbitmq.py  redis.py  sms_service.py  utils.py
app/domain/: exceptions.py  schemas.py
app/domain/services/: notification_service.py  preferences_service.py
app/entrypoint/rest_api/: dependencies.py  main.py
app/infraestructure/: celery.py
app/infraestructure/db/: database.py  models.py
app/ports/: __init__.py  email_service.py  notifications_repository.py  preferences_repository.py  property_service.py  queue_port.py  sms_service.py  user_repository.py
tests/: conftest.py
tests/integration/domain/: notification_service_data.py  notification_service_test.py
tests/unit/: __init__.py
tests/unit/config/: connection_url_data.py  connection_url_test.py  database_data.py  database_test.py  (+4 more)
(+13 files in other folders)
