[project]
name = "app"
version = "0.1.0"
description = ""
authors = [
    {name = "Gustavo Saavedra", email = "gustavo.saavedra@endava.com"}
]
readme = "README.md"
requires-python = ">=3.12"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
alembic = "^1.14.1"
asyncpg = "^0.30.0"
fastapi = {extras = ["standard"], version = "^0.115.8"}
sqlalchemy = "^2.0.38"
pydantic-settings = "^2.7.1"
python-json-logger = "^3.2.1"
greenlet = "^3.1.1"
celery = {extras = ["redis"], version = "^5.4.0"}
redis = "^5.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^8.3.4"
pytest-cov = "^6.0.0"
pytest-sugar = "^1.0.0"
pytest-xdist = "^3.6.1"
pytest-mock = "^3.14.0"
pytest-asyncio = "^0.25.3"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.15.0"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov=app --cov-report=term-missing --cov-config=.coveragerc -vv -n auto"
testpaths = [
    "tests",
]
python_files = ["*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "slow: Slow-running tests",
]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"

[tool.mypy]
ignore_missing_imports = true